--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=springboot-rabbitmq-project
+
+
+rabbitmq.queue.name=first_queue
+rabbitmq.exchange.name=start_exchange
+rabbitmq.routingKey.name=first_routing_key
+
+rabbitmq.jsonQueue.name=first_json_queue
+rabbitmq.jsonRoutingKey.name=json_routing
